# vanity

./: .gitignore  Cargo.toml  README.md
contracts/: Create2Factory.sol  SimpleStorage.sol
scripts/: build-create2-calldata.ts
src/: main.rs
